# NeMo_NIM

./: .env.example  .gitignore  .pre-commit-config.yaml  ALIGNMENT_REPORT.md  CLAUDE.md  CLEANUP_AUDIT.md  COMPLETE_TEST_REPORT.md  CUDA_COMPATIBILITY_NOTES.md  CURRENT_MIGRATION_STATUS.md  Dockerfile  LESSONS_LEARNED.md  LICENSE  MIGRATION_GUIDE.md  ML_STACK_STATUS.md  OPTIMIZATION_STATUS.md  PREFLIGHT_CHECK.md  PRODUCTION_DEPLOYMENT.md  PROJECT_REALITY_CHECK.md  PROJECT_STATUS.md  QUICK_START_DOCKER.md  README.md  ROADMAP.md  SETUP_GUIDE.md  SETUP_STATUS.md  UBUNTU_SETUP_GUIDE.md  VERIFICATION_CHECKLIST.md  WSL2_GUIDE.md  benchmark_real_inference.py  config.yaml  connect_wsl2.bat  debug_issues.py  docker-compose.yml  expert_cache.py  fix_alignment.py  install_cuda_stack.sh  install_docker.sh  install_nvidia_toolkit.sh  install_python_ml_stack.sh  launch_docker.bat  launch_docker.sh  (+26 more)
.claude/: settings.local.json
.github/workflows/: performance.yml  test.yml
archive/: inference_correct.py
configs/: development.yaml  moe_production.yaml  staging.yaml  training_optimal.yaml  unsloth_official.yaml
configs/model/: gpt_oss_20b.py
docs/: 00_DOCUMENTATION_INDEX.md  01_PROJECT_OVERVIEW.md  02_QUICK_START.md  11_NATIVE_MOE_IMPLEMENTATION.md  12_OPTIMIZATIONS_COMPLETE.md  13_OPTIMIZATION_ROADMAP.md  14_SAFETY_FRAMEWORK.md  15_VALIDATION_REPORT_FINAL.md  16_FUTURE_ROADMAP.md  17_PHASE1_IMPLEMENTATION_STATUS.md  18_CURRENT_PRODUCTION_STATE.md  19_WSL_SETUP_GUIDE.md  40_MULTI_AGENT_OVERVIEW.md  41_AGENT_INTEGRATION.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BEST_PRACTICES.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETE_TEST_REPORT.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GPT_OSS_MODEL.md  GRPO_RL_GUIDE.md  LESSONS_LEARNED.md  MODEL_MANUAL.md  MoE_CHECKLIST_RESULTS.md  OPERATIONS.md  OPTIMIZATION_GUIDE.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  TECHNICAL.md  TROUBLESHOOTING.md  UNIFIED_DEVELOPMENT_FRAMEWORK.md  Ultimate MoE Optimization Stack.md
logs/: optimization_audit.jsonl
models/: README.md
requirements/: base.txt
scripts/: README.md  baseline_performance.py  benchmark.py  chat.py  chat_gradio_fixed.py  chat_interactive.py  check_cuda_components.py  check_ml_readiness.py  debug_channels.py  evaluate.py  export_to_llama.py  fetch_real_modeling.py  fix_model_loading.py  generate.py  import_gpt_oss.py  inference.py  install_cuda_wsl.sh  install_ml_stack_wsl.sh  install_system_deps_wsl.sh  launch_production.sh  modeling_gpt_oss.py  preflight_check.py  prepare_dataset.py  run_with_flash.sh  stop_production.sh  test_speed.py  train.py  train_advanced.py  train_gpt_oss.py  train_unsloth.py
src/: config.py  mcp_server.py
test_results/: moe_checklist_results.json  test_results_v3.json
tests/: benchmark_native_moe.py  model_integration_test.py  test_functional.py  test_optimizations.py  test_performance.py  test_safety_integration.py  test_suite_v3.py  test_unified_moe.py  test_unit.py
workspace/: convert_hf_to_nemo.py  convert_to_nemo.py  gpt_oss_training.py  inference.py  test_gpt_oss_config.py
(+67 files in other folders)
