[project]
name = "ai-multi-agent-discussion"
version = "1.0.0"
description = "AI Expert Multi-Agent Discussion System"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.68.0",
    "asyncio>=4.0.0",
    "faiss-cpu>=1.12.0",
    "PyPDF2>=3.0.1",
    "tiktoken>=0.11.0",
    "numpy>=1.26.0",
    "streamlit>=1.49.0",
    "pandas>=2.3.0",
    "rich>=14.1.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

openai = [
    "openai>=1.107.0",
]

[project.scripts]
ai-discuss = "main:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"