[project]
name = "ai-agents-moe"
version = "0.3.1"
description = "Production-ready Mixture of Experts implementation for GPT-OSS-20B"
authors = [{name = "AI Agents Team"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}

dependencies = [
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "safetensors>=0.6.2",
    "accelerate>=1.10.1",
    "numpy<2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pytest>=7.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "anthropic>=0.68.0",
    "streamlit>=1.49.0",
    "pandas>=2.3.0",
    "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "pytest-asyncio>=0.21.0",
]

quantization = [
    "bitsandbytes>=0.47.0",
    "triton>=3.4.0",
]

[project.scripts]
moe-server = "src.api.server:main"
moe-benchmark = "tests.test_performance:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]